shipunov 1.14:
 MDSv() improved.

shipunov 1.13:
 corrections in NEWS;
 help files improved.

shipunov 1.12:
 Cosine.dist() removed as it is not useful in the context of package;
 SM.dist() can now ignore similarities in zeroes and discretize numerical variables;
 new function Tctext() which is based on but more convenient than Tcoords() for labeling 'hclust' plots;
 PlotBest.dist() and PlotBest.mdist() improved (and simplified);
 plot.Jclust() now accepts 'pos' and 'offset' options for text;
 help files improved.

shipunov 1.11:
 Bclust() now accepts the pre-built list of 'hclust' objects;
 plot.Jclust() now plots rectangle borders even if they go outside of plotting region;
 new method plot.Bclust() for quick plotting boostrap values;
 Bclust() is now able to count the relative matches;
 new function SM.dist() for simple match distances;
 Files() corrected so it now outputs file list if needed;
 new data 'hrahn' and related multi-entry identification system;
 Pleiad() now converts dissimilarities into similarities and can colorize negative correlations;
 help files improved.

shipunov 1.10:
 "PBSmapping" package is now imported, not suggested so it should be installed together with "shipunov";
 Dotchart1(), Dotchart(), Linechart(), Ex.col(), Str() functions and corresponding help files improved;
 Gower.dist() now controls the missing data in the output;
 Tcoords() now outputs proper coordinates even if labels are not present;
 new functions Polycenter() and Polyarea(), function Squares() re-worked;
 Hulls() and Ellipses() output now "centers" and "outliers" as _attributes_, please note that this might affect older scripts;
 Overlap(), Squares() and Pinhull() are improved, their option "Hulls=" removed;
 Jclust() and Bclabels() updated;
 new Fences() function which colorizes tips of "hclust" dendrogram.

shipunov 1.9: