@@ -2,21 +2,25 @@
 exportPattern(".")
 
 # This is what R CMD check --as-cran suggests:
+
 importFrom("grDevices", "adjustcolor", "boxplot.stats", "chull",
            "col2rgb", "colors", "dev.off", "grey", "palette", "pdf")
+
 importFrom("graphics", "abline", "arrows", "axis", "barplot", "box",
            "boxplot", "dotchart", "grid", "hist", "image", "legend",
            "lines", "locator", "matlines", "mtext", "par", "plot",
            "plot.new", "plot.window", "points", "polygon", "rect",
            "segments", "strwidth", "text", "title", "contour")
+
 importFrom("stats", "IQR", "aggregate", "as.dendrogram", "as.dist",
            "ave", "chisq.test", "cmdscale", "cophenetic", "cor",
            "cor.test", "cov", "cutree", "dendrapply", "density",
            "dist", "dnorm", "embed", "fisher.test", "fivenum",
-           "hclust", "is.leaf", "lm", "mad", "median", "model.frame",
+           "hclust", "is.leaf", "kmeans", "lm", "mad", "median", "model.frame",
            "na.omit", "pairwise.table", "pf", "pnorm", "prcomp",
            "predict", "qf", "quantile", "rnorm", "runif", "sd",
            "shapiro.test", "var", "setNames")
+
 importFrom("utils", "capture.output", "combn", "head", "menu",
            "object.size", "savehistory", "str", "write.table")
 
